--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </select>
 
   <label for="cameraInput">Select Image(s):</label>
+  <!-- multiple attribute allows selecting more than one image -->
   <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
 
   <div class="preview" id="preview"></div>
