--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   </select>
 
   <label for="cameraInput">Select Image(s):</label>
-  <!-- multiple attribute allows selecting more than one image -->
   <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
 
   <div class="preview" id="preview"></div>
@@ -33,7 +32,7 @@
     const previewDiv = document.getElementById("preview");
     const uploadBtn = document.getElementById("uploadBtn");
 
-    // ---------- Fetch today's tracking numbers ----------
+    // Fetch today's tracking numbers
     fetch(WEB_APP_URL)
       .then(res => res.json())
       .then(data => {
@@ -53,7 +52,7 @@
       })
       .catch(console.error);
 
-    // ---------- Show image previews ----------
+    // Show image previews
     fileInput.addEventListener("change", () => {
       previewDiv.innerHTML = "";
       Array.from(fileInput.files).forEach(file => {
@@ -63,7 +62,53 @@
       });
     });
 
-    // ---------- Upload images ----------
+    // Resize and compress image to WebP format
+    function resizeImage(file, maxSize = 1000000) {
+      return new Promise((resolve, reject) => {
+        const img = new Image();
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          img.src = e.target.result;
+        };
+        reader.readAsDataURL(file);
+
+        img.onload = function () {
+          const canvas = document.createElement("canvas");
+          const ctx = canvas.getContext("2d");
+
+          // Resize image to fit within maxWidth and maxHeight
+          const maxWidth = 1024;
+          const maxHeight = 1024;
+          let width = img.width;
+          let height = img.height;
+
+          if (width > maxWidth || height > maxHeight) {
+            if (width > height) {
+              height = Math.round((height * maxWidth) / width);
+              width = maxWidth;
+            } else {
+              width = Math.round((width * maxHeight) / height);
+              height = maxHeight;
+            }
+          }
+
+          canvas.width = width;
+          canvas.height = height;
+          ctx.drawImage(img, 0, 0, width, height);
+
+          // Compress to WebP format and check file size
+          canvas.toBlob(function (blob) {
+            const reader = new FileReader();
+            reader.onloadend = function () {
+              resolve(reader.result);  // Base64 data URL
+            };
+            reader.readAsDataURL(blob);
+          }, "image/webp", 0.8);  // 0.8 is the compression factor
+        };
+      });
+    }
+
+    // Upload images
     uploadBtn.addEventListener("click", () => {
       const tracking = trackingSelect.value;
       if (!tracking) return alert("Please select a tracking number");
@@ -71,11 +116,12 @@
 
       const readers = [];
       Array.from(fileInput.files).forEach(file => {
-        const reader = new FileReader();
-        readers.push(new Promise(resolve => {
-          reader.onload = e => resolve(e.target.result);
-          reader.readAsDataURL(file);
-        }));
+        // Resize and compress the image before uploading
+        readers.push(
+          resizeImage(file, 1000000).then(result => {
+            return result;  // This will contain the base64 compressed image
+          })
+        );
       });
 
       Promise.all(readers).then(results => {
