--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     body { font-family: Arial, sans-serif; padding: 20px; }
     select, input, button { margin: 10px 0; display: block; }
     .preview img { max-width: 150px; margin: 5px; }
+    .input-container { margin-top: 20px; }
+    .input-container button { display: inline-block; margin-top: 10px; }
   </style>
 </head>
 <body>
@@ -17,8 +19,11 @@
     <option value="">Select Tracking Number</option>
   </select>
 
-  <label for="cameraInput">Select Image(s):</label>
-  <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
+  <div class="input-container">
+    <label for="cameraInput">Select Image(s):</label>
+    <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
+    <button type="button" id="addMoreBtn">Add More Images</button>
+  </div>
 
   <div class="preview" id="preview"></div>
 
@@ -28,9 +33,12 @@
     const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbw8FqXG2Cy1YqSnSSF55WnBQNuOiw7xeiAbSgo_MoHKcJvuuQJX2xfSHbf6K3avIy1Z/exec";
 
     const trackingSelect = document.getElementById("trackingSelect");
-    const fileInput = document.getElementById("cameraInput");
+    const fileInputContainer = document.querySelector(".input-container");
     const previewDiv = document.getElementById("preview");
     const uploadBtn = document.getElementById("uploadBtn");
+    const addMoreBtn = document.getElementById("addMoreBtn");
+
+    let filesToUpload = [];
 
     // Fetch today's tracking numbers
     fetch(WEB_APP_URL)
@@ -52,17 +60,32 @@
       })
       .catch(console.error);
 
-    // Show image previews
-    fileInput.addEventListener("change", () => {
-      previewDiv.innerHTML = "";
-      Array.from(fileInput.files).forEach(file => {
-        const img = document.createElement("img");
-        img.src = URL.createObjectURL(file);
-        previewDiv.appendChild(img);
-      });
+    // ---------- Show image previews ----------
+    fileInputContainer.addEventListener("change", (event) => {
+      const input = event.target;
+      const fileList = input.files;
+
+      if (fileList.length > 0) {
+        for (let i = 0; i < fileList.length; i++) {
+          const file = fileList[i];
+          const img = document.createElement("img");
+          img.src = URL.createObjectURL(file);
+          previewDiv.appendChild(img);
+          filesToUpload.push(file);
+        }
+      }
     });
 
-    // Resize and compress image to WebP format
+    // ---------- Add more images functionality ----------
+    addMoreBtn.addEventListener("click", () => {
+      const newInput = document.createElement("input");
+      newInput.type = "file";
+      newInput.accept = "image/*";
+      newInput.capture = "environment";
+      fileInputContainer.appendChild(newInput);
+    });
+
+    // ---------- Resize and Compress Image to WebP format ----------
     function resizeImage(file, maxSize = 1000000) {
       return new Promise((resolve, reject) => {
         const img = new Image();
@@ -108,14 +131,14 @@
       });
     }
 
-    // Upload images
+    // ---------- Upload images ----------
     uploadBtn.addEventListener("click", () => {
       const tracking = trackingSelect.value;
       if (!tracking) return alert("Please select a tracking number");
-      if (!fileInput.files.length) return alert("Please select at least one image");
+      if (filesToUpload.length === 0) return alert("Please select at least one image");
 
       const readers = [];
-      Array.from(fileInput.files).forEach(file => {
+      filesToUpload.forEach(file => {
         // Resize and compress the image before uploading
         readers.push(
           resizeImage(file, 1000000).then(result => {
@@ -140,7 +163,7 @@
           if (data.success) {
             alert("Uploaded successfully!");
             previewDiv.innerHTML = ""; // clear preview
-            fileInput.value = "";
+            filesToUpload = []; // clear file list
           } else {
             alert("Error: " + (data.error || "Unknown error"));
           }
