--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Upload POD Images</title>
+  <title>Upload Sample Image</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     select, input, button { margin: 10px 0; display: block; }
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h2>Upload POD Images</h2>
+  <h2>Upload Sample Images</h2>
 
   <label for="trackingSelect">Select Tracking Number:</label>
   <select id="trackingSelect">
@@ -22,7 +22,7 @@
   <div class="input-container">
     <label for="cameraInput">Select Image(s):</label>
     <input type="file" id="cameraInput" accept="image/*" capture="environment" multiple>
-    <button type="button" id="addMoreBtn">Add More Images</button>
+    <button type="button" id="addMoreBtn">+</button>
   </div>
 
   <div class="preview" id="preview"></div>
